tests/NormalTests/paczka1/fuzzy1/69565922.err
Error in line 2: gn4owSG7S A267 82,9
Error in line 1: qZbtqnZo S706 38,3
Error in line 10: idLnOwe S129 70,5
Error in line 12: qZbtqnZo S129 17,4
Error in line 9: LyAHMSIZJNO S129 24,1
Error in line 38: gn4owSG7S A267 13,26
Error in line 30: LUW3 S129 123,9
